--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lodash": "^4.17.4",
     "material-ui": "^0.16.7",
     "moment": "^2.15.1",
-    "office-ui-fabric-react": "^1.2.2",
+    "office-ui-fabric-core": "^6.0.0",
+    "office-ui-fabric-react": "^1.4.0",
     "randomcolor": "^0.4.4",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
@@ -45,14 +46,14 @@
     "react-hotkeys": "^0.9.0",
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.1",
-    "recompose": "^0.21.2",
+    "recompose": "^0.22.0",
     "redux": "^3.6.0",
-    "redux-actions": "^1.2.0",
+    "redux-actions": "^1.2.1",
     "redux-undo": "1.0.0-beta7",
     "reselect": "^2.5.4",
     "resize-observer-polyfill": "^1.3.2",
     "scroll-into-view-if-needed": "^1.0.4",
-    "serviceworker-webpack-plugin": "^0.1.6",
+    "serviceworker-webpack-plugin": "^0.1.8",
     "sw-toolbox": "^3.4.0"
   },
   "devDependencies": {
@@ -63,23 +64,23 @@
     "@types/express": "^4.0.35",
     "@types/file-saver": "^0.0.0",
     "@types/jszip": "^0.0.32",
-    "@types/lodash": "^4.14.50",
-    "@types/material-ui": "^0.16.47",
+    "@types/lodash": "^4.14.52",
+    "@types/material-ui": "^0.16.48",
     "@types/mocha": "^2.2.38",
-    "@types/node": "^7.0.1",
+    "@types/node": "^7.0.4",
     "@types/randomcolor": "^0.4.3",
-    "@types/react": "^15.0.1",
-    "@types/react-addons-css-transition-group": "^15.0.0",
-    "@types/react-dom": "^0.14.20",
-    "@types/react-dropzone": "^0.0.30",
-    "@types/react-redux": "^4.4.32",
+    "@types/react": "^15.0.6",
+    "@types/react-addons-css-transition-group": "^15.0.1",
+    "@types/react-dom": "^0.14.22",
+    "@types/react-dropzone": "^0.0.31",
+    "@types/react-redux": "^4.4.36",
     "@types/react-tap-event-plugin": "^0.0.30",
-    "@types/recompose": "^0.20.1",
+    "@types/recompose": "^0.20.3",
     "@types/redux": "^3.6.31",
     "@types/redux-actions": "^1.2.2",
-    "@types/webpack": "^2.2.2",
+    "@types/webpack": "^2.2.4",
     "async-module-loader": "^2.1.0",
-    "autoprefixer": "^6.7.0",
+    "autoprefixer": "^6.7.2",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.0.0",
@@ -100,11 +101,10 @@
     "babel-preset-stage-3": "^6.22.0",
     "babel-register": "^6.22.0",
     "babili": "^0.0.10",
-    "babili-webpack-plugin": "^0.0.7",
-    "carte-blanche": "^0.3.1",
+    "babili-webpack-plugin": "^0.0.9",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
-    "eslint": "^3.14.0",
+    "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^3.0.2",
@@ -112,10 +112,10 @@
     "expect": "^1.20.2",
     "expect-jsx": "^3.0.0",
     "exports-loader": "^0.6.3",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
+    "express": "^4.14.1",
+    "file-loader": "^0.10.0",
     "istanbul-instrumenter-loader": "^1.2.0",
-    "karma": "^1.4.0",
+    "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
@@ -125,26 +125,27 @@
     "karma-mocha-reporter": "^2.2.2",
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
-    "karma-webpack": "^2.0.1",
-    "node-sass": "^4.3.0",
+    "karma-webpack": "^2.0.2",
+    "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.4.0-beta.2",
+    "svgo": "^0.7.2",
     "svgo-loader": "^1.1.0",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
+    "tslint": "^4.4.2",
     "tslint-react": "^2.3.0",
     "typescript": "^2.1.5",
     "typings": "^2.1.0",
     "url-loader": "^0.5.7",
     "webpack": "2",
-    "webpack-dashboard": "^0.2.1",
-    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-middleware": "^1.10.0",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-hot-middleware": "^2.15.0",
+    "webpack-hot-middleware": "^2.16.1",
     "webpack-html-plugin": "^0.1.1",
     "webpack-validator": "^2.3.0",
     "worker-loader": "^0.7.1"
