--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "material-ui": "^0.16.7",
     "moment": "^2.15.1",
     "office-ui-fabric-core": "^6.0.0",
-    "office-ui-fabric-react": "^1.4.0",
+    "office-ui-fabric-react": "^1.5.2",
     "randomcolor": "^0.4.4",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
@@ -71,9 +71,9 @@
     "@types/glob": "^5.0.30",
     "@types/jszip": "^0.0.32",
     "@types/lodash": "^4.14.52",
-    "@types/material-ui": "^0.16.48",
-    "@types/mocha": "^2.2.38",
-    "@types/node": "^7.0.4",
+    "@types/material-ui": "^0.16.49",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
     "@types/randomcolor": "^0.4.3",
     "@types/react": "^0.14.49",
     "@types/react-addons-css-transition-group": "^15.0.1",
@@ -113,10 +113,10 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "deep-assign": "^2.0.0",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
     "expect-jsx": "^3.0.0",
@@ -136,6 +136,7 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
